--- a/react/src/views/CampaignDetailsView/CampaignDetailsView.module.css
+++ b/react/src/views/CampaignDetailsView/CampaignDetailsView.module.css
@@ -100,6 +100,10 @@
     line-height: 1.5;
     align-content: flex-start;
     margin-right: 50px;
+
+    overflow-wrap: break-word;
+    word-break: break-word;
+    white-space: pre-wrap;
 }
 
 .campaignInfo {
